# streamer

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  INSTALL.md  OFFICIAL_README.md  README.md  main.cpp  sftp-config.json
apps/: CMakeLists.txt  runner.cpp  tx1_classify.cpp  tx1_run_alexnet.cpp
apps/app_face_tracker/: CMakeLists.txt  app_face_tracker.cpp
apps/benchmark/: benchmark.cpp
apps/binary_file_writer/: binary_file_writer.cpp
apps/classifier/: classifier.cpp
apps/classify/: classify.cpp
apps/demo/: demo.cpp
apps/detection/: detection.cpp
apps/detector/: detector.cpp
apps/diff_detector/: diff_detector.cpp
apps/encoder/: encoder.cpp
apps/face/: face.cpp
apps/face_detector/: CMakeLists.txt  face_detector.cpp
apps/face_mtcnn/: CMakeLists.txt  face_mtcnn.cpp
apps/filterforward/: CMakeLists.txt  README.md  filterforward.cpp
apps/flow_control/: flow_control.cpp
apps/frame_writer/: frame_writer.cpp
apps/gige/: file_writer.cpp  file_writer.h  gige.cpp  gige_file_writer.cpp  gige_file_writer.h
apps/hdr/: hdr.cpp
apps/imagematch/: imagematch.cpp
apps/jpeg_writer/: jpeg_writer.cpp
apps/json_pipeline_runner/: CMakeLists.txt  json_pipeline_runner.cpp
apps/keyframe_detector/: CMakeLists.txt  keyframe_detector.cpp  vary_kd_params.cpp
apps/mainstream/: CMakeLists.txt  mainstream_performance.cpp  mainstream_server.cpp
apps/mobilenet_mem_bench/: mobilenet_mem_bench.cpp
apps/multicam/: db_filewriter.cpp  db_filewriter.h  framesdatabase.cpp  framesdatabase.hpp  framesdb.xml  multicam.cpp  multicam_pipeline.json
apps/people/: people.cpp
apps/pipeline/: CMakeLists.txt  pipeline.cpp
apps/pubsub/: CMakeLists.txt  publish.cpp  subscribe.cpp
apps/recorder/: recorder.cpp
apps/rpc/: CMakeLists.txt  rpc_receiver.cpp  rpc_sender.cpp
apps/rpc_receiver/: receiver.cpp
apps/rpc_sender/: rpc_sender.cpp  sender.cpp
apps/runner/: runner.cpp
apps/save_vishashes/: save_vishashes.cpp
apps/segmentation/: segmentation.cpp
apps/serializer/: serializer.cpp
apps/server/: server.cpp  server_utils.h
apps/simple/: simple.cpp
apps/split_nne/: CMakeLists.txt  camera.cpp  classifier.cpp  nne.cpp  split_classifier.cpp  split_nne.cpp
apps/split_nne_rpc/: CMakeLists.txt  camera.cpp  cloud.cpp  nne.cpp  nne1.cpp  nne1_nocam.cpp  nne2.cpp  passer.cpp  transformer.cpp
apps/strider/: strider.cpp
apps/tracker/: CMakeLists.txt  tracker.cpp
apps/tracker_obj/: tracker_obj.cpp
apps/tracker_struck/: tracker_struck.cpp
apps/train_detector/: CMakeLists.txt  db_filewriter.cpp  db_filewriter.h  framesdb.xml  litesql_writer.cpp  litesql_writer.h  train_detector.cpp  train_detector_publisher.cpp  train_detector_subscriber.cpp
apps/traindetector/: CMakeLists.txt  compressor.cpp  db_filewriter.cpp  db_filewriter.h  framesdb.xml  traindetector.cpp
src/: CMakeLists.txt  CaffeClassifier.cpp  CaffeClassifier.h  CaffeFp16Classifier.cpp  CaffeFp16Classifier.h  CaffeV1Classifier.cpp  GIEClassifier.cpp  GIEClassifier.h  GIEInferer.cpp  GIEInferer.h  GstVideoCapture.cpp  GstVideoCapture.h  NeuralNet.cpp  NeuralNet.h  Timer.h  Type.h  Utils.cpp  Utils.h  caffe_classifier.cpp  caffe_classifier.h  caffe_fp16_classifier.cpp  caffe_fp16_classifier.h  caffe_v1_classifier.cpp  caffe_v1_classifier.h  classifier.cpp  classifier.h  common.h  data_buffer.h  float16.cpp  float16.h  fp16.cpp  fp16.h  fp16_emu.h  gie_classifier.cpp  gie_classifier.h  gie_inferer.cpp  gie_inferer.h  gst_video_capture.cpp  gst_video_capture.h  mxnet_classifier.cpp  (+7 more)
src/camera/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  gst_camera.cpp  gst_camera.h  pgr_camera.cpp  pgr_camera.h  vimba_camera.cpp  vimba_camera.h
src/classifier/: caffe_classifier.cpp  caffe_classifier.h  caffe_fp16_classifier.cpp  caffe_fp16_classifier.h  caffe_v1_classifier.cpp  caffe_v1_classifier.h  classifier.cpp  classifier.h  gie_classifier.cpp  gie_classifier.h  gie_inferer.cpp  gie_inferer.h  mxnet_classifier.cpp  mxnet_classifier.h
src/common/: common.cpp  common.h  context.h  data_buffer.h  serialization.h  timer.h  types.cpp  types.h  utils.h
src/model/: caffe_fp16_model.cpp  caffe_fp16_model.h  caffe_model.cpp  caffe_model.h  caffe_opencl_model.cpp  caffe_opencl_model.h  gie_inferer.cpp  gie_inferer.h  gie_model.cpp  gie_model.h  model.cpp  model.h  model_desc.cpp  model_desc.h  model_manager.cpp  model_manager.h  mxnet_model.cpp  mxnet_model.h  tf_model.cpp  tf_model.h
src/ncs/: ncs.h  ncs_manager.cpp  ncs_manager.h
src/pipeline/: pipeline.cpp  pipeline.h  spl_parser.cpp  spl_parser.h
src/processor/: batch_classifier.cpp  batch_classifier.h  binary_file_writer.cpp  binary_file_writer.h  buffer.cpp  buffer.h  caffe_facenet.cpp  caffe_facenet.h  caffe_mtcnn.cpp  caffe_mtcnn.h  caffe_yolo_detector.cpp  caffe_yolo_detector.h  compressor.cpp  compressor.h  db_writer.cpp  db_writer.h  diff_detector.cpp  diff_detector.h  display.cpp  display.h  dummy_nn_processor.cpp  dummy_nn_processor.h  face_tracker.cpp  face_tracker.h  facenet.cpp  facenet.h  file_writer.cpp  file_writer.h  frame_writer.cpp  frame_writer.h  frcnn_detector.cpp  frcnn_detector.h  fv_gen.cpp  fv_gen.h  image_classification_processor.cpp  image_classification_processor.h  image_classifier.cpp  image_classifier.h  image_segmentation_processor.cpp  image_segmentation_processor.h  (+48 more)
src/stream/: frame.cpp  frame.h  stream.cpp  stream.h
src/utils/: cuda_utils.h  cv_utils.h  file_utils.h  fp16.h  gst_utils.h  image_utils.h  math_utils.h  output_tracker.cpp  output_tracker.h  perf_utils.h  string_utils.h  time_utils.h  utils.h  (+1 more)
test/: CMakeLists.txt  streamer_gtest_main.cpp  test_camera_manager.cpp  test_context.cpp  test_frame.cpp  test_gst_camera.cpp  test_gst_camera.cpp.cpp  test_gst_video_encoder.cpp  test_model_manager.cpp  test_nne_caffe.cpp  test_pipeline.cpp  test_simple.cpp  test_spl_parser.cpp  test_stream.cpp  test_stream_publisher.cpp  test_strider.cpp  test_string_utils.cpp  test_tinytoml.cpp  test_types.cpp  test_vimba_camera.cpp  tx1dnn_gtest_main.cpp
(+134 files in other folders)
