if (NOT USE_CAFFE)
  return ()
endif ()

MACRO(BUILD_ONE app)
  if (JEMALLOC_FOUND)
    target_link_libraries(${app} ${JAMALLOC_LIBRARIES})
  endif ()
  target_link_libraries(${app} streamer ${Boost_PROGRAM_OPTIONS_LIBRARY})
  add_dependencies(apps ${app})
  ADD_BUILD_REQS(${app})
ENDMACRO()

add_executable(face_tracker EXCLUDE_FROM_ALL face_tracker.cpp)
BUILD_ONE(face_tracker)
