MACRO(BUILD_ONE app)
  if (JEMALLOC_FOUND)
    target_link_libraries(${app} ${JAMALLOC_LIBRARIES})
  endif ()
  if (GVC_FOUND)
    target_link_libraries(${app} ${GVC_LIBRARIES})
  endif ()
  target_link_libraries(${app} streamer ${Boost_PROGRAM_OPTIONS_LIBRARY})
  add_dependencies(apps ${app})
  ADD_BUILD_REQS(${app})
ENDMACRO()

add_executable(streamer_pipeline_json EXCLUDE_FROM_ALL json_pipeline_runner.cpp)
BUILD_ONE(streamer_pipeline_json)
